test测试预览插件

--- a/public/uservip.html
+++ b/public/uservip.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.12&key=6c960bc2772c369d2c2dc3da1d03db9a&plugin=AMap.Geocoder"></script>
     <script type="text/javascript" src="https://webapi.amap.com/demos/js/liteToolbar.js"></script> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@2.0/lib/index.css">
-
+    <script src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
   </head>
   <body>
     <noscript>
