--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title></title>
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1205059_0q66qih0mtw.css"> <!-- 字体图标 -->
-    <link href="https://cdn.bootcss.com/Swiper/4.5.0/css/swiper.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/Swiper/4.5.0/js/swiper.min.js"></script>
-    <script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/html2canvas.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+
+    <!-- <link href="./assets/css/swiper.min.css" rel="stylesheet">
+    <script src="./assets/js/swiper.min.js"></script> -->
+    
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.12&key=6c960bc2772c369d2c2dc3da1d03db9a&plugin=AMap.Geocoder"></script>
     <script type="text/javascript" src="https://webapi.amap.com/demos/js/liteToolbar.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vant@2.0/lib/index.css">
-    <script src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
-
   </head>
   <body>
     <noscript>
@@ -23,7 +26,7 @@
     
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <!-- <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
-    <script src="https://cdn.bootcss.com/vue-router/3.1.2/vue-router.min.js"></script> -->
+    <!-- <script src="./assets/js/vue.min.js"></script>
+    <script src="./assets/js/vue-router.min.js"></script> -->
   </body>
 </html>
