--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title></title>
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1205059_0q66qih0mtw.css"> <!-- 字体图标 -->
-    <script src="./assets/js/jquery.min.js"></script>
-    <script src="./assets/js/html2canvas.min.js"></script>
+    <script src="<%= BASE_URL %>assets/js/jquery.min.js"></script>
+    <script src="<%= BASE_URL %>assets/js/html2canvas.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
 
